--- a/app/views/hospitals/_form_field_hospital.html.erb
+++ b/app/views/hospitals/_form_field_hospital.html.erb
@@ -2,7 +2,7 @@
   <div class="d-flex align-items-start">
     <label class="select required" for="ppsp_hospital_id">Hôpital le plus proche<abbr title="required">*</abbr></label>
     <% if policy(Hospital).new? %>
-      <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalHospital">
+      <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalHospital">
         <i class="fas fa-plus"></i>
       </button>
     <% end %>
