--- a/app/views/ppsps/show.pdf.erb
+++ b/app/views/ppsps/show.pdf.erb
@@ -41,8 +41,10 @@
           </div>
         </div>
       </div>
-      </div>
-    <div class="pdf-text-container mt-3">
+    </div>
+  </div>
+  <div class="page-break">
+    <div class="pdf-text-container my-3">
       <div class="pdf-title">
         Renseignements Administratifs
       </div>
