--- a/app/views/sos_hands/_form_field_sos_hand.html.erb
+++ b/app/views/sos_hands/_form_field_sos_hand.html.erb
@@ -1,8 +1,14 @@
-<div class="form-group select required ppsp_sos_hand_id"><label class="select required" for="ppsp_sos_hand_id">SOS Mains et Doigts <abbr title="required">*</abbr></label>
-  <select class="form-control select required" name="ppsp[sos_hand_id]" id="ppsp_sos_hand_id">
-    <option value=""></option>
-    <% @sos_hands.each do |instance| %>
-      <%= "<option value=#{instance.id}>#{instance.name}</option>".html_safe %>
-    <% end %>
-  </select>
+<div class="container-header-form">
+  <label class="select required" for="ppsp_sos_hand_id">Centre SOS Mains et Doigts<abbr title="required">*</abbr></label>
+  <% if policy(SosHand).create? %>
+    <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalSosHand" id="SosDb">
+      <i class="fas fa-plus"></i>
+    </button>
+  <% end %>
 </div>
+<select class="form-control select required" name="ppsp[sos_hand_id]" id="ppsp_sos_hand_id">
+  <option value=""></option>
+  <% @sos_hands.each do |instance| %>
+    <%= "<option value=#{instance.id}>#{instance.name}</option>".html_safe %>
+  <% end %>
+</select>
