--- a/app/views/moas/_form_field_moa.html.erb
+++ b/app/views/moas/_form_field_moa.html.erb
@@ -1,8 +1,14 @@
-<div class="form-group select required ppsp_moa_id"><label class="select required" for="ppsp_moa_id">MOA <abbr title="required">*</abbr></label>
-  <select class="form-control select required" name="ppsp[moa_id]" id="ppsp_moa_id">
-    <option value=""></option>
-    <% @moas.each do |moa| %>
-      <%= "<option value=#{moa.id}>#{moa.name} - #{moa.representative}</option>".html_safe %>
-    <% end %>
-  </select>
+<div class="container-header-form">
+  <label class="select required" for="ppsp_moa_id">MOA <abbr title="required">*</abbr></label>
+  <% if policy(Moa).new? %>
+    <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalMoa" id="MoaDb">
+      <i class="fas fa-plus"></i>
+    </button>
+  <% end %>
 </div>
+<select class="form-control select required" name="ppsp[moa_id]" id="ppsp_moa_id">
+  <option value=""></option>
+  <% @moas.each do |moa| %>
+    <%= "<option value=#{moa.id}>#{moa.name} - #{moa.representative}</option>".html_safe %>
+  <% end %>
+</select>
