--- a/app/views/pension_insurances/_form_field_pension_insurance.html.erb
+++ b/app/views/pension_insurances/_form_field_pension_insurance.html.erb
@@ -1,8 +1,14 @@
-<div class="form-group select required ppsp_pension_insurance_id"><label class="select required" for="ppsp_pension_insurance_id">Caisse d'assurance retraite <abbr title="required">*</abbr></label>
-  <select class="form-control select required" name="ppsp[pension_insurance_id]" id="ppsp_pension_insurance_id">
-    <option value=""></option>
-    <% @pension_insurances.each do |instance| %>
-      <%= "<option value=#{instance.id}>#{instance.address} - #{instance.phone}</option>".html_safe %>
-    <% end %>
-  </select>
+<div class="container-header-form">
+  <label class="select required" for="ppsp_pension_insurance_id">Caisse d'assurance retraite <abbr title="required">*</abbr></label>
+  <% if policy(PensionInsurance).create? %>
+    <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalPensionInsurance" id="PensionDb">
+      <i class="fas fa-plus"></i>
+    </button>
+  <% end %>
 </div>
+<select class="form-control select required" name="ppsp[pension_insurance_id]" id="ppsp_pension_insurance_id">
+  <option value=""></option>
+  <% @pension_insurances.each do |instance| %>
+    <%= "<option value=#{instance.id}>#{instance.address} - #{instance.phone}</option>".html_safe %>
+  <% end %>
+</select>
