--- a/app/views/work_medecines/_form_field_work_medecine.html.erb
+++ b/app/views/work_medecines/_form_field_work_medecine.html.erb
@@ -1,8 +1,14 @@
-<div class="form-group select required ppsp_work_medecine_id"><label class="select required" for="ppsp_work_medecine_id">Médecine du travail <abbr title="required">*</abbr></label>
-  <select class="form-control select required" name="ppsp[work_medecine_id]" id="ppsp_work_medecine_id">
-    <option value=""></option>
-    <% @work_medecines.each do |work| %>
-      <%= "<option value=#{work.id}>#{work.address} - #{work.phone}</option>".html_safe %>
-    <% end %>
-  </select>
+<div class="container-header-form">
+  <label class="select required" for="ppsp_work_medecine_id">Médecine du travail <abbr title="required">*</abbr></label>
+  <% if policy(WorkMedecine).create? %>
+    <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalWorkMedecine" id="MedecineDb">
+      <i class="fas fa-plus"></i>
+    </button>
+  <% end %>
 </div>
+<select class="form-control select required" name="ppsp[work_medecine_id]" id="ppsp_work_medecine_id">
+  <option value=""></option>
+  <% @work_medecines.each do |work| %>
+    <%= "<option value=#{work.id}>#{work.address} - #{work.phone}</option>".html_safe %>
+  <% end %>
+</select>
