--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -6,6 +6,13 @@
       <%= f.input :email, label: "Email" %>
       <%= f.submit "Éditer les informations", class: 'btn-blue' %>
     <% end %>
+    <% if current_user.admin && current_user == @user %>
+      <%= cl_image_tag @user.company.logo.key, height: 300, width: 400, crop: :fill %>
+      <%= simple_form_for @user.company, html: { method: :patch } do |f| %>
+        <%= f.input :logo, required: true %>
+        <%= f.submit "Ajouter/modifier le logo", class: "btn-blue"%>
+      <% end %>
+    <% end %>
     <%= link_to "Revenir au profil", profile_path(@user), class: 'link' %>
   </div>
 </div>
