--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -227,6 +227,7 @@
   justify-content: space-evenly;
   border-radius: 8px;
   padding: 8px;
+  gap: 20px;
   margin-bottom: 3em;
   min-height: 120px;
   .card-profile-info {
@@ -244,6 +245,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+}
+
+@media(max-width: 767px) {
+  .card-profile {
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
   }
 }
 
@@ -362,14 +371,12 @@
   }
 }
 
-.card-edit {
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
-}
-
 @media (max-width: 992px) {
   .card-edit {
     position: static;
   }
+}
+
+.card-logo-empty {
+  text-align: center;
 }
