Refacto full controller

--- a/app/views/deminings/_elements.html.erb
+++ b/app/views/deminings/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @deminings_page.each do |demining| %>
+<% @database_page.each do |demining| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
