--- a/app/views/deminings/index.html.erb
+++ b/app/views/deminings/index.html.erb
@@ -26,12 +26,12 @@
     </form>
     <div class="content-db">
       <div class="flex-database">
-        <%= render 'elements', collection: @deminings_page %>
+        <%= render 'elements', collection: @database_page %>
       </div>
       <div class="container-db-vide" style='display:none'>
         Votre recherche n'a retourné aucun résultat
       </div>
-      <div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %> data-search= <%= @search %> data-number = <%= @deminings_page.count %>>
+      <div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %> data-search= <%= @search %> data-number = <%= @database_page.count %>>
         <%= image_tag('gif-loading.gif') %>
       </div>
     </div>
