--- a/app/views/direccts/_elements.html.erb
+++ b/app/views/direccts/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @direccts_page.each do |direcct| %>
+<% @database_page.each do |direcct| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
