--- a/app/views/direccts/_form_field_direcct.html.erb
+++ b/app/views/direccts/_form_field_direcct.html.erb
@@ -1,8 +1,8 @@
 <div class="form-group select required ppsp_direcct_id"><label class="select required" for="ppsp_direcct_id">DIRECCT <abbr title="required">*</abbr></label>
   <select class="form-control select required" name="ppsp[direcct_id]" id="ppsp_direcct_id">
     <option value=""></option>
-    <% @direccts.each do |direcct| %>
-      <%= "<option value=#{direcct.id}>#{direcct.address} - #{direcct.phone}</option>".html_safe %>
+    <% @database.each do |data| %>
+      <%= "<option value=#{data.id}>#{data.address} - #{data.phone}</option>".html_safe %>
     <% end %>
   </select>
 </div>
