--- a/app/views/moes/_elements.html.erb
+++ b/app/views/moes/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @moes_page.each do |moe| %>
+<% @database_page.each do |moe| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
