--- a/app/views/pension_insurances/_elements.html.erb
+++ b/app/views/pension_insurances/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @pension_insurances_page.each do |pension_insurance| %>
+<% @database_page.each do |pension_insurance| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
