--- a/app/views/regional_committees/_elements.html.erb
+++ b/app/views/regional_committees/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @regional_committees_page.each do |regional_committee| %>
+<% @database_page.each do |regional_committee| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
