--- a/app/views/security_coordinators/_elements.html.erb
+++ b/app/views/security_coordinators/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @security_coordinators_page.each do |security_coordinator| %>
+<% @database_page.each do |security_coordinator| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
