--- a/app/views/security_coordinators/_form_field_security_coordinator.html.erb
+++ b/app/views/security_coordinators/_form_field_security_coordinator.html.erb
@@ -9,8 +9,8 @@
     </div>
     <select class="form-control select optional" name="ppsp[security_coordinator_id]" id="ppsp_security_coordinator_id">
     <option value=""></option>
-    <% @security_coordinators.each do |secu| %>
-      <%= "<option value=#{secu.id}>#{secu.name} - #{secu.representative}</option>".html_safe %>
+    <% @database.each do |data| %>
+      <%= "<option value=#{data.id}>#{data.name} - #{data.representative}</option>".html_safe %>
     <% end %>
   </select>
 </div>
