--- a/app/views/sos_hands/_elements.html.erb
+++ b/app/views/sos_hands/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @sos_hands_page.each do |sos_hand| %>
+<% @database_page.each do |sos_hand| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
