--- a/app/views/work_medecines/_elements.html.erb
+++ b/app/views/work_medecines/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @work_medecines_page.each do |work_medecine| %>
+<% @database_page.each do |work_medecine| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
