--- a/app/views/moas/_elements.html.erb
+++ b/app/views/moas/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @moas_page.each do |moa| %>
+<% @database_page.each do |moa| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
