--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -257,10 +257,13 @@
         <%= f.input :river_guidance, label: "Signalisation fluviale", as: :select, collection: Ppsp::RIVER_GUIDANCES %>
       </div>
       <div class="col-md-6 offset-md-3">
-        <% if @ppsp.logo_client.attached? %>
-          <%= cl_image_tag @ppsp.logo_client.key, class: 'icon-logo mb-3' %>
-        <% end %>
         <%= f.input :logo_client, label: "Logo du client (si disponible)" %>
+        <% if @ppsp.logo_client.attached? %>
+          <div class="logo">
+            <%= cl_image_tag @ppsp.logo_client.key, class: 'icon-logo mb-3' %>
+          </div>
+          <%= link_to "Supprimer", destroy_logo_client_ppsp_path(@ppsp), class: 'btn-delete' %>
+        <% end %>
       </div>
       <div class="col-md-6 offset-md-3 offset-3 offset-md-5">
         <%= f.submit "Accéder à la deuxième page", class: 'btn-blue' %>
