--- a/app/views/anti_poisons/create.js.erb
+++ b/app/views/anti_poisons/create.js.erb
@@ -6,7 +6,7 @@ $(document).ready(function() {
     document.querySelector(".ppsp_anti_poison_id").innerHTML = "<%= j(render 'form_field_anti_poison') %>";
   }
   if (document.querySelector(".content-db")) {
-    document.querySelector(".content-db").innerHTML = "<%= j(render 'content-db') %>";
+    document.querySelector(".content-db").innerHTML = "<%= j(render 'database/content-db') %>";
   }
 })
 
