--- a/app/views/database/edit.html.erb
+++ b/app/views/database/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-6 offset-3">
-    <%= render 'form' %>
+    <%= render "#{@data.class.to_s.underscore.+'s'}/form" %>
   </div>
 </div>
