--- a/app/views/direccts/create.js.erb
+++ b/app/views/direccts/create.js.erb
@@ -6,7 +6,7 @@ $(document).ready(function() {
     document.getElementById("ppsp_direcct_id").innerHTML = "<%= j(render 'form_field_direcct') %>";
   }
   if (document.querySelector(".content-db")) {
-    document.querySelector(".content-db").innerHTML = "<%= j(render 'content-db') %>";
+    document.querySelector(".content-db").innerHTML = "<%= j(render 'database/content-db') %>";
   }
 })
 
