--- a/app/views/sos_hands/create.js.erb
+++ b/app/views/sos_hands/create.js.erb
@@ -6,7 +6,7 @@ $(document).ready(function() {
     document.getElementById("ppsp_sos_hand_id").innerHTML = "<%= j(render 'form_field_sos_hand') %>";
   }
   if (document.querySelector(".content-db")) {
-    document.querySelector(".content-db").innerHTML = "<%= j(render 'content-db') %>";
+    document.querySelector(".content-db").innerHTML = "<%= j(render 'database/content-db') %>";
   }
 })
 
