--- a/app/views/work_medecines/index.js.erb
+++ b/app/views/work_medecines/index.js.erb
@@ -1,3 +1,3 @@
 if (document.querySelector(".content-db")) {
-  document.querySelector(".content-db").innerHTML = "<%= j(render 'content-db') %>";
+  document.querySelector(".content-db").innerHTML = "<%= j(render 'database/content-db') %>";
 }
