--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -265,7 +265,13 @@
           <%= link_to "Supprimer", destroy_logo_client_ppsp_path(@ppsp), class: 'btn-delete' %>
         <% end %>
       </div>
-      <div class="col-md-6 offset-md-3 offset-3 offset-md-5">
+      <div class="col-12 form-title">
+        Les informations sécurité de l'entreprise
+      </div>
+      <div class="col-md-10 offset-md-1">
+        <%= f.rich_text_area :content_secu %>
+      </div>
+      <div class="col-md-6 offset-md-3 offset-3 offset-md-5 mt-5">
         <%= f.submit "Accéder à la deuxième page", class: 'btn-blue' %>
       </div>
     </div>
