Ajouter la possibilité de modifier le texte de sécurité de base de l'entreprise

--- a/app/assets/stylesheets/components/_actiontext.scss
+++ b/app/assets/stylesheets/components/_actiontext.scss
@@ -11,6 +11,8 @@
 .trix-content {
 
   background-color: white;
+  height: 500px;
+  overflow: auto;
 
   .attachment-gallery {
     > action-text-attachment,
