--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,4 @@
-$btn-add-size: 18px;
+$btn-add-size: 24px;
 
 .btn-blue {
   padding: 4px 8px;
@@ -181,6 +181,95 @@ $btn-add-size: 18px;
     cursor: pointer;
   }
 }
+
+.icon-btn {
+  outline: none;
+  border: none;
+  margin-left: $btn-add-size/2;
+  margin-right: $btn-add-size/5;
+  width: $btn-add-size;
+  height: $btn-add-size;
+  background: transparent;
+  border-radius: $btn-add-size / 2;
+  overflow: hidden;
+  position: relative;
+  transition: width 0.2s ease-in-out;
+  border: 1px solid $orange;
+  background-color: white;
+}
+.add-btn:hover {
+  width: $btn-add-size * 2.5;
+}
+.add-btn::before,
+.add-btn::after {
+  transition: width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 9px;
+  top: calc(50% - 1px);
+  background: $orange;
+}
+.add-btn::after {
+  right: 7px;
+  overflow: hidden;
+  border-top-right-radius: 1px;
+  border-bottom-right-radius: 1px;
+}
+.add-btn::before {
+  left: 7px;
+  border-top-left-radius: 1px;
+  border-bottom-left-radius: 1px;
+}
+.icon-btn:focus {
+  outline: none;
+}
+.btn-txt {
+  opacity: 0;
+  font-size: 10px;
+  transition: opacity 0.2s;
+  color: $orange;
+}
+.add-btn:hover::before,
+.add-btn:hover::after {
+  width: 2px;
+  border-radius: 1px;
+}
+.add-btn:hover .btn-txt {
+  opacity: 1;
+}
+.add-icon::after,
+.add-icon::before {
+  transition: all 0.2s ease-in-out;
+  content: "";
+  position: absolute;
+  height: 10px;
+  width: 1px;
+  top: calc(50% - 5px);
+  background: $orange;
+  overflow: hidden;
+}
+.add-icon::before {
+  left: 10px;
+  border-top-left-radius: 1px;
+  border-bottom-left-radius: 1px;
+}
+.add-icon::after {
+  right: 10px;
+  border-top-right-radius: 1px;
+  border-bottom-right-radius: 1px;
+}
+.add-btn:hover .add-icon::before {
+  left: 7px;
+  height: 2px;
+  top: calc(50% - 1px);
+}
+.add-btn:hover .add-icon::after {
+  right: 7px;
+  height: 2px;
+  top: calc(50% - 1px);
+}
+
 
 .btn-round {
   cursor: pointer;
