--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -64,8 +64,9 @@
           <div class="container-header-form">
             <label class="select required" for="ppsp_moa_id">MOA <abbr title="required">*</abbr></label>
             <% if policy(Moa).new? %>
-              <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalMoa" id="MoaDb">
-                <i class="fas fa-plus"></i>
+              <button type="button" class="icon-btn add-btn" data-toggle="modal" data-target="#ModalMoa" id="MoaDb">
+                <div class="add-icon"></div>
+                <div class="btn-txt">Ajouter</div>
               </button>
             <% end %>
           </div>
