--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -17,7 +17,8 @@
         <% end %>
         Texte de sécurité de l'entreprise
         <%= f.simple_fields_for :company, @company do |h| %>
-          <%= h.rich_text_area :content_secu %>
+          <%= h.text_area :content_secu, class: 'tinymce' %>
+          <%= tinymce %>
         <% end %>
       <% end %>
       <%= f.submit "Éditer les informations", class: 'btn-blue' %>
