--- a/app/views/ppsps/footer.html.erb
+++ b/app/views/ppsps/footer.html.erb
@@ -2,5 +2,5 @@
   <div class='mt-3 footer-text'>
     Ce document a été produit avec l'application Obras
   </div>
-  <%= wicked_pdf_image_tag('logo-ppsp.png', width: 30, height: 30, class: 'image-footer') %>
+  <span class="page"></span> / <span class="topage"></span>
 </footer>
