Add the fact to update or delete the logo's company

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -365,12 +365,14 @@ $btn-add-size: 24px;
   &:hover {
     color: rgb(245, 62, 62);
     text-decoration: none;
+    cursor: pointer;
   }
 }
 
 input[type=file]::-webkit-file-upload-button {
   border-radius: 8px;
   border: 1px solid $orange;
+  outline: none;
   &:hover {
     cursor: pointer;
     box-shadow: 0.5px 0.5px 0.5px 0.5px $orange;
