--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="container mb-3">
   <%= link_to "Revenir à mes PPSP", ppsps_path, class: 'link' %>
-  <%= simple_form_for @ppsp do |f| %>
+  <%= simple_form_for @ppsp, remote: true do |f| %>
     <div class="row">
       <div class="col-12 form-title">
         Chantier
