--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -9,22 +9,55 @@
       <%= f.input :email, label: "Email" %>
       <% if @user.admin %>
         <div class="d-flex flex-column align-items-center">
-          <% if @user.company.logo.attached? %>
-            <h2>Logo de l'entreprise</h2>
-            <%= cl_image_tag @user.company.logo.key, class: 'icon-logo mb-3' %>
-          <% end %>
+          <h2>Logo de l'entreprise</h2>
+          <div class="container-home render-logo">
+            <%= render 'render_logo' %>
+          </div>
           <%= f.simple_fields_for :company, @company do |h| %>
-            <%= h.input :logo, label: false %>
+            <%= h.input :logo, label: false, input_html: {onchange: "loadLogo(event)"} %>
           <% end %>
+          <div class='btn-delete' id="removeUpload" style='display: none;'>Annuler</div>
         </div>
         <h2 class="text-center">Texte de sécurité de l'entreprise</h2>
         <%= f.simple_fields_for :company, @company do |h| %>
-          <input class='hidden' name=image type=file id="upload" onchange="">
           <%= h.text_area :content_secu, class: 'tinymce' %>
           <%= tinymce %>
         <% end %>
       <% end %>
-      <%= f.submit "Éditer les informations", class: 'btn-blue' %>
+      <div class="d-flex justify-content-center my-4">
+        <%= f.submit "Valider mes modifications", class: 'btn-blue' %>
+      </div>
     <% end %>
   </div>
 </div>
+<script>
+  const loadLogo = (event) => {
+    const image = document.getElementById('newLogo');
+    const arrow = document.querySelector('.fa-long-arrow-alt-right');
+    const btnCancelUpload = document.getElementById('removeUpload');
+    const btnDeleteLogo = document.getElementById('removeLogo');
+    // Si il exite un fichier à uploader
+    if(event.target.files[0]) {
+      arrow.style.display = 'block';
+      btnCancelUpload.style.display = 'block'
+      // Si l'entreprise n'a pas encore de logo le bouton n'exitse pas
+      if(btnDeleteLogo) {
+        btnDeleteLogo.style.display = 'none'
+      }
+      btnCancelUpload.addEventListener('click', (e) => {
+        // Si il exite un fichier à uploader
+        event.target.value = null
+        btnCancelUpload.style.display = 'none'
+        loadLogo(event)
+      })
+      return image.src = URL.createObjectURL(event.target.files[0]);
+    } {
+      arrow.style.display = 'none';
+      image.style.display = 'none';
+      // Si l'entreprise n'a pas encore de logo le bouton n'exitse pas
+      if(btnDeleteLogo) {
+        btnDeleteLogo.style.display = 'block'
+      }
+    }
+  };
+</script>
